--- a/contact-coach.html
+++ b/contact-coach.html
@@ -148,11 +148,11 @@
         </header>
         <nav>
             <ul>
-                <li><a href="../accueil.html">Accueil</a></li>
-                <li><a href="../tout-parcourir.html">Tout Parcourir</a></li>
-                <li><a href="../recherche.html">Recherche</a></li>
-                <li><a href="../rendez-vous.html">Rendez-vous</a></li>
-                <li><a href="../votre-compte.html">Votre Compte</a></li>
+            <a href="main_acceuil.html">Accueil</a>
+            <a href="tout-parcourir.html">Tout Parcourir</a>
+            <a href="recherche.html">Recherche</a>
+            <a href="acceuil_rdv.php">Rendez-vous</a>
+            <a href="compte.html">Votre Compte</a>
             </ul>
         </nav>
         <section>
